--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,8 @@
 
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
 }
